all'interno del html ho inserito un div my_wrapper

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Fizzbuzz</title>
 </head>
 <body>
+    <main>
+        <h1>FizzBuzz</h1>
+
+        <div class="my_wrapper">
+
+        </div>
+    </main>
     <script src="./js/index.js"></script>
 </body>
 </html>
