creo tre classi div per poi inserirli nel js

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <main>
         <h1>FizzBuzz</h1>
 
-        <div class="my_wrapper">
-
+        <div class="Fizz">
+        </div>
+        <div class="Buzz">
+        </div>
+        <div class="FizzBuzz">
         </div>
     </main>
     <script src="./js/index.js"></script>
