ho inserito il document per scrivere nella pagina

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Fizzbuzz</title>
 </head>
 <body>
-    <main>
+    <main id="output">
         <h1>FizzBuzz</h1>
 
         <div class="Fizz">
